# st-id-token-patch

./: MANIFEST.in  README.md  pyproject.toml  setup.py  streamlit_id_token_patch.py
src/patch/: patch.py
src/streamlit_id_token_patch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
