[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_id_token_patch"
version = "0.1"

[tool.setuptools]
# Tell setuptools where your .py module is located
py-modules = ["patch"]
package-dir = {"" = "src"}

[tool.setuptools.data-files]
# Install patch.pth directly into site-packages
"" = ["src/patch.pth"]