[project]
name = "streamlit-id-token-patch"
version = "0.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = "streamlit-id-token-patch"

[tool.hatch.build.hooks.autorun]
dependencies = ["hatch-autorun"]
code = """
import streamlit-id-token-patch
"""