[project]
name = "streamlit-id-token-patch"
version = "0.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = "streamlit_id_token_patch"

[tool.hatch.build.hooks.autorun]
dependencies = ["hatch-autorun"]
code = """
import streamlit_id_token_patch
"""